[gd_scene load_steps=5 format=3 uid="uid://run_summary_scene"]

[ext_resource type="Script" path="res://scenes/ui/run_summary.gd" id="1_run_summary"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(1, 1, 1, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 0.8)

[sub_resource type="LabelSettings" id="LabelSettings_stat"]
font_size = 26
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 0.6)

[sub_resource type="LabelSettings" id="LabelSettings_score"]
font_size = 40
font_color = Color(1, 0.85, 0.2, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 0.8)

[node name="RunSummary" type="CanvasLayer"]
layer = 12
process_mode = 3
visible = false
script = ExtResource("1_run_summary")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.85)
mouse_filter = 0

[node name="SummaryContainer" type="VBoxContainer" parent="Overlay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -450.0
offset_right = 400.0
offset_bottom = 450.0
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TitleLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
text = "Run Complete!"
label_settings = SubResource("LabelSettings_title")

[node name="Spacer" type="Control" parent="Overlay/SummaryContainer"]
custom_minimum_size = Vector2(0, 10)
mouse_filter = 2

[node name="MergesLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_stat")

[node name="ChainLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_stat")

[node name="TierLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_stat")

[node name="CardsLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_stat")

[node name="CoinsLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_stat")

[node name="TimeLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_stat")

[node name="ScoreLabel" type="Label" parent="Overlay/SummaryContainer"]
mouse_filter = 2
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_score")

[node name="ButtonRow" type="HBoxContainer" parent="Overlay/SummaryContainer"]
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayAgainButton" type="Button" parent="Overlay/SummaryContainer/ButtonRow"]
custom_minimum_size = Vector2(200, 60)
mouse_filter = 0
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="QuitButton" type="Button" parent="Overlay/SummaryContainer/ButtonRow"]
custom_minimum_size = Vector2(200, 60)
mouse_filter = 0
theme_override_font_sizes/font_size = 24
text = "Quit"
